# cpp-tdigest

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.markdown  coverage.sh
src/: CMakeLists.txt  avltree.cpp  avltree.hpp  main.cpp  tdigest.hpp
src/tdigest/: CMakeLists.txt  tdigest.cpp  tdigest.hpp
src/tests/: CMakeLists.txt  avltree.cpp
tests/: CMakeLists.txt
